--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nrwl/node": "14.4.2",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "14.4.2",
+    "@nrwl/storybook": "^14.4.2",
     "@nrwl/web": "14.4.2",
     "@nrwl/workspace": "14.4.2",
     "@testing-library/react": "13.3.0",
